--- a/main.html
+++ b/main.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <nav>
+    <div class="nav-bar">
         <ul>
             <li><button onclick="clock()">CLOCK</button></li>
             <li><button onclick="stopwatch()">STOP WATCH</button></li>
             <li><button onclick="timer()">TIMER</button></li>
         </ul>
-    </nav>
-    <h1></h1>
+    </div>
+    <div class="container">
+    <span>00</span>
+    <span>:</span>
+    <span>00</span>
+    <span>:</span>
+    <span>00</span>
+    </div>
 </body>
 </html>
