--- a/main.html
+++ b/main.html
@@ -15,11 +15,13 @@
         </ul>
     </div>
     <div class="container">
-    <span>00</span>
-    <span>:</span>
-    <span>00</span>
-    <span>:</span>
-    <span>00</span>
+        <div class="clock">
+         <span id="hrs">00</span>
+         <span>:</span>
+         <span id="min">00</span>
+         <span>:</span>
+         <span id="sec">00</span>
+        </div>
     </div>
 </body>
 </html>
