--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Clock</title>
     <link rel="stylesheet" href="main.css">
+    <script src="main.js"></script>
 </head>
 <body>
     <div class="nav-bar">
@@ -22,6 +23,7 @@
          <span>:</span>
          <span id="sec">00</span>
         </div>
+        <button id="counter" onclick="count()">Start</button>
     </div>
 </body>
 </html>
